styles.css
html {
    scroll-behavior: smooth;
}

body {
    display: flex; 
    flex-direction: column;
    align-items: center;
    font-family: sans-serif;
    margin: 0px;
}

.superscript {
    vertical-align: super;
    font-size: smaller;
}

.header a:hover {
    /* text-decoration: underline; */
    /* background-color: #324258; */
    /* text-shadow: 2px 2px 1px #3882f6; */
    font-weight: 550;
    cursor: pointer;
    
}

.header a {
    text-decoration: none;
    color: #e5e7eb; 
}
.boxwrap a:hover {
    box-shadow: 2px 2px 1px rgb(148, 144, 144);
    cursor: pointer;
}

button:hover {
    cursor: pointer;
}

button:active, .boxwrap a:active {
    transform: translateY(2px);
}

/* /////////////////////////////Header///////////////////////////////// */

.header {
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: #1f2937;
    color: #f9faf8;
    min-height: 250px;
    gap: 50px;
    width: 100%;
}

/* Header Top */
.header .top {
    display: flex;
    justify-content: space-between;
    width: 100%;
    margin-top: 10px;
}
.header .top .left {
    display: flex;
    justify-content: flex-start;
    font-size: 24px;
    font-weight: 700;
    margin-left: 20px;
}

.header .top .right {
    display: flex;
    justify-content: flex-end;
    font-size: 18px;
    color: #e5e7eb; 
    gap: 20px;
    margin-right: 20px;
}

/* Header Bottom */
.header .bottom {
    display: flex;
    justify-content: space-between;
    margin-left: 100px;
    margin-right: 100px;
    margin-bottom: 50px;
    max-width: 100%;
}
.header .bottom .left {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 100%;
    padding: 10px;
    gap: 10px;
    flex-grow: 1;
    flex-shrink: 1;
    min-width: 200px;
}

.header .bottom .left .title {
    font-size: 48px;
    font-weight: 900;
}

.header .bottom .left .subtitle {
    font-size: 18px;
    color: #e5e7eb;
    margin-bottom: 10px; 
}

.header .bottom .left .signup {
    background-color: #3882f6;
    color: white;
    border: solid #3882f6;
    border-radius: 5px;
    min-width: 75px;
    max-width: 100px;
    height: 30px;
    font-size: 16px;
    font-weight: 700;
    text-align: center;
}

.header .bottom .right {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 30px;
    width: 100%;
    flex-grow: 1;
    flex-shrink: 1;
}

.coco {
    width: 30%;
    height: auto;
    flex-grow: 1;
    flex-shrink: 1;
    min-width: 200px;
    max-width: 400px;

}

/* //////////////////////////Content/////////////////////////////////// */

.content {
    display: flex;
    flex-direction: column;
    align-items: center;
    flex-grow: auto;
    flex-shrink: auto;
    max-width: 100%;
}

/* Content Top */
.content .top {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    min-height: 250px;
    height: 600px;
}

.content .top .title {
    font-size: 50px;
    font-weight: 900;
    text-align: center;
}

 .content .top .boxes {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    width: 100%;
    gap: 30px;
    flex-wrap: wrap;
    gap: 60px;
}

.content .top .boxes .boxwrap {
    display: flex;
    flex-direction: column;
    align-items: center; 
    gap: 5px;
}

.content .top .boxes .boxwrap .box {
    display: flex;
    justify-content: center;
    align-items: center;
    border: 4px solid #3882f6;
    border-radius: 10px;
    width: 175px;
    height: 175px;
    flex-grow: 0;
    flex-shrink: 1;
}

.box img {
    width: 175px;
    height: 175px;
    border-radius: 5px;
}


/* Content Middle */
.content .middle {
    background-color: #e5e7eb;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 450px;
    width: 100%;
}

.content .middle .wrapper {
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    min-width: 300px;
    margin-left: 250px;
    margin-right: 250px;
    gap: 10px;
}
.content .middle .wrapper .text {
    min-width: 300px;
    font-size: 33px;
    font-style: italic;
    font-weight: lighter;
    color: #1f2937;
}   

.content .middle .wrapper .subtext {
    font-size: 22px;
    font-weight: 700;
}

/* Content Bottom */
.content .bottom {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    min-height: 200px;
    height: 500px;
    width: 100%;
}

.content .bottom .popup {
    background-color: #3882f6;
    display: flex;
    justify-items: space-evenly;
    align-items: center;
    border-radius: 5px;
    min-width: 375px;
    margin-left: 150px;
    margin-right: 150px;
    padding: 45px;
    gap: 50px;
}

.content .bottom .popup .wrapper {
    min-width: 200px;
}

.content .bottom .popup .wrapper .text {
    color: white;
    font-size: 26px;
    font-weight: 700;
}

.content .bottom .popup .wrapper .subtext {
    color: white;
}

.content .bottom .popup .signup {
    border-radius: 5px;
    border: 2px solid white;
    background-color: #3882f6;
    color: white;
    font-size: 20px;
    flex-shrink: 0;
    width: 125px;
    height: 50px;
    margin-right: 20px;
}

/* //////////////////////////Footer////////////////////////////////////// */

.footer {
    background-color: #1f2937;
    color: #f9faf8;
    text-align: center;
    width: 100%;
}

